@@ -153,7 +153,7 @@ fi
 %{_sbindir}/%{name}
 %{_libexecdir}/%{name}*
 
-%{_datadir}/%{name}/glade/%{name}.glade
+%{_datadir}/%{name}/glade/*.glade
 %{_datadir}/applications/gnome-%{name}.desktop
 %{_datadir}/icons/hicolor/48x48/apps/%{name}.png
 
@@ -171,8 +171,13 @@ fi
 %{python_sitelib}/%{name}/sessionwindow.py*
 %{python_sitelib}/%{name}/usermod.py*
 %{python_sitelib}/%{name}/usersdialog.py*
+%{python_sitelib}/%{name}/lockdownappliersabayon.py*
+%{python_sitelib}/%{name}/lockdown
 
 %changelog
+* Fri Nov  4 2005 Alexander Larsson <alexl@redhat.com> - 2.12.1-1
+- Update
+
 * Mon May 23 2005 Mark McLoughlin <markmc@redhat.com> - 2.11.90-1
 - Update to 2.11.90
 - Don't %ghost .pyo files, package them
